# stowr-core

./: Cargo.toml  README.md
example/: Cargo.toml  basic_usage.rs  tauri_integration.rs
src/: config.rs  dedup.rs  delta.rs  index.rs  lib.rs  storage.rs
