[package]
name = "stowr-core"
version = "0.2.2"
edition = "2021"
license = "GPL-3.0-or-later"
homepage = "https://github.com/XiaoLinXiaoZhu/stowr-core"
repository = "https://github.com/XiaoLinXiaoZhu/stowr-core"
authors = ["XiaoLinXiaoZhu"]
keywords = ["file", "storage", "compression", "management", "archive"]
categories = ["filesystem", "compression", "command-line-utilities"]
readme = "README.md"

description = "Core library for stowr file management system - provides file compression, storage, and indexing functionality"

[dependencies]
rusqlite = { version = "0.36", features = ["bundled"] }
flate2 = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1.10"
rayon = "1.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[package.metadata.release]
# 发布前确认
release = true
# 发布到 crates.io
publish = true
# 自动推送 git 标签
push = true
# 发布后创建 git 标签
tag = true
# 标签名格式 (会是 v0.2.2)
tag-name = "v{{version}}"
# 标签消息
tag-message = "Release stowr-core version {{version}}"
